// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment Component Testing: Should render even with UNDEFINED test data 1`] = `
<div
  className="comment"
  id="comment-undefined-undefined"
>
  <div
    className="author-info"
  >
    <div
      className="author"
    />
    <span
      className="separator"
    >
         
    </span>
    <div
      className="points"
    >
       points
    </div>
    <span
      className="separator"
    >
         
    </span>
    <div
      className="comment-created-when"
    >
      <n
        ago={false}
        calendar={false}
        decimal={false}
        element={null}
        filter={[Function]}
        fromNow={true}
        interval={60000}
        local={false}
        onChange={[Function]}
        titleFormat=""
        toNow={false}
        trim={false}
        unit={null}
        unix={true}
        utc={false}
        withTitle={false}
      />
    </div>
  </div>
  <div
    className="comment-body"
  />
</div>
`;

exports[`Comment Component Testing: Should render with FAKE test data 1`] = `
<div
  className="comment"
  id="comment-r/worldnews-1-2"
>
  <div
    className="author-info"
  >
    <div
      className="author"
    >
      test_author
    </div>
    <span
      className="separator"
    >
         
    </span>
    <div
      className="points"
    >
      5000
       points
    </div>
    <span
      className="separator"
    >
         
    </span>
    <div
      className="comment-created-when"
    >
      <n
        ago={false}
        calendar={false}
        decimal={false}
        element={null}
        filter={[Function]}
        fromNow={true}
        interval={60000}
        local={false}
        onChange={[Function]}
        titleFormat=""
        toNow={false}
        trim={false}
        unit={null}
        unix={true}
        utc={false}
        withTitle={false}
      >
        1634130100
      </n>
    </div>
  </div>
  <div
    className="comment-body"
  >
    this is a test for comment's body
  </div>
</div>
`;
